# vocab_llm_bot

./: .devcontainer.json  .env.example  .gitignore  Makefile  README.md  cli.py  main.py  pyproject.toml
vocab_llm_bot/: app.py  config.py  dict_file.py
