[project]
name = "vocab_llm_bot"
version = "0.1.0"
description = "Learn your vocab words via cli / bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
]
